--- a/css/index.css
+++ b/css/index.css
@@ -383,3 +383,20 @@ img {
 	  transform: rotate(360deg);
 	}
   }
+
+  #preloader {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(36, 34, 34, 0.8); 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+}
+#preloader img{
+    min-width: 250px;
+    max-width: 250px;
+}
